# sysforpopkinetics

./: CEO  PageName.md  ProjectHome.md  README.md
brad/spk/cspk/ml/Simulate/: Makefile.am
branches/ernst/sgid/: configure.ac
branches/ernst/sgid/check_ident/doc/: Makefile
branches/ernst/sgid/libident/: Makefile.in
branches/ernst/sgid/libident/src/: Makefile.in
branches/ernst/sgid/libident/test/: checkParamIdentTest.cpp
branches/ernst/sgid/web/: AUTHORS
branches/ernst/sgid/web/html/: index.php  test.php
branches/ernst/sgid/web/jobs/: README
branches/ernst/spk/cspk/driver/: README  autogen.sh  configure.ac
branches/ernst/spk/cspk/non_par/: ChangeLog  ExtractId  Makefile.am  configure.ac  run_omhelp.sh
branches/jiaji/spk/aspk/spkcompiler/: configure.ac
branches/release-dev/spk/cspk/QN01Box/: CleanQN01Box.sh  QN01Box.omh  RunOMhelp.sh  configure.ac
branches/release-dev/spk/cspk/spk/: ChangeLog  Makefile.am  README  configure.ac
r1/Optimizer/QN01Box/: configure.ac
r1/Optimizer/QN01Box/QN01Box/: Bfgs.h  MaxAbs.h  Next.h  PlusInfinity.h  max.h
r1/Optimizer/QN01Box/Test/: DanWood.cpp  Degenerate.cpp  ExpLeastSquares.cpp  SingularUpdate.cpp
r1/Optimizer/QN01Box/lib/: Bfgs.cpp  Error.cpp  PositiveMatrix.cpp  QuadBox.cpp  QuasiNewton01Box.cpp  is_symmetric.cpp
r1/watrous/spd/lib/src/: Channel.cpp  EqIndModel.cpp  File.cpp  FullCovariance.h  FullIndParCovariance.cpp  Makefile.am  SpkError.cpp  SpkModel.cpp  backDiv.cpp  backDiv.h  fitIndividual.h  fitPopulation.h  hTilde.h  identity.cpp  isDmatEpsEqual.cpp  isSymmetric.cpp  lTilde.cpp  lambda.h  mapObj.h  (+8 more)
r2/sgid/check_ident/test/: Makefile.am
spk/aspk/spkcompiler/: AUTHORS  Makefile.am  README  configure.ac
spk/aspk/spkcompiler/doc/: Makefile  Makefile.am  Makefile.in  SpkCompiler.dox  SpkCompiler.html  SpkExpLanguage.html  SpkInML_nonmem.txt  SpkInterfaceLangSpec.doc  SpkML.dtd  SpkMLSpec.txt  SpkML_nonmem.txt  SpkML_nonmemIn.xml  SpkML_nonmemOut.xml  SpkOutML_nonmem.txt  SpkReportML.dtd  SpkReportML_nonmem.xml  SpkSourceML.dtd  SpkSourceML_nonmem.xml  api.cfg  common.cfg  core.cfg  dataStructure.txt  menu.html  nmtran.cfg  nonmem.cfg  nonmem_menu.html  spkcompiler.cfg  spkcompiler.xml
spk/aspk/spkcompiler/driver/: Makefile.am  compiler.cpp  spkcompiler.cpp
spk/aspk/spkcompiler/libspkcompiler/: ClientTranslator.cpp  ClientTranslator.h  ExpNodeCarrier.h  ExpTreeGenerator.h  Makefile.am  SpkCompilerError.cpp  SpkCompilerError.h  SpkCompilerException.cpp  SpkCompilerException.h  SpkCompilerUtil.cpp  SpkCompilerUtil.h  SpkMLToCpp.cpp  SpkMLToCpp.h  SpkParameters.h  Symbol.cpp  Symbol.h  SymbolTable.cpp  SymbolTable.h  cholesky.cpp  client.h  emit_IndData.cpp  emit_IndData.h  emit_IndDataClass.cpp  factorial.cpp  factorial.h  lower.h  read_content.cpp  read_content.h  series.h  upper.cpp  upper.h
spk/aspk/spkcompiler/spkcompiler/: ClientTranslator.cpp  ClientTranslator.h  Makefile.am  SpkCompilerError.cpp  SpkCompilerError.h  SpkCompilerException.cpp  SpkCompilerException.h  Symbol.cpp  Symbol.h  SymbolTable.cpp  SymbolTable.h  client.h  lower.cpp  main.cpp  series.cpp
spk/cspk/QN01Box/: AUTHORS  Build.sh  ChangeLog  Makefile  Makefile.am  configure  configure.ac  header.sh
spk/cspk/QN01Box/Doc/: __index_xml.js  _bfgs_xml.js  _delta_xml.js  _error_xml.js  _external.xml  _glossary_xml.js  _license_xml.js  _next_xml.js  _plusinfinity_xml.js  _positivematrix_xml.js  _quadbox_xml.js  _search_xml.htm  _utility_xml.js  bfgs.xml  converge.xml  error.xml  glossary.xml  index.xml  license.xml  maxabs.xml  memory.xml  next.xml  plusinfinity.xml  positivematrix.xml  residual.xml  scaleprojgrad.xml
spk/cspk/QN01Box/QN01Box/: Delta.h  PositiveMatrix.h  QuadBox.h  QuadFixed.h  QuasiNewton01Box.h  Residual.h  ScaleProjGrad.h  c2dsyev.h  config.h  config.h.in  stamp-h1
spk/cspk/QN01Box/Test/: Degenerate2.cpp  Makefile.am  MemoryError.cpp  QuasiNewton01Box.cpp  Test_04_02_18.cpp  TwoCompartment.cpp  zero_one_scale.cpp
spk/cspk/QN01Box/autom4te.cache/: output.1  requests  traces.0  traces.1
spk/cspk/QN01Box/lib/: Delta.cpp  Next.cpp  QuadBox.cpp  Residual.cpp  SumAbs.cpp
spk/cspk/QN01Box/omh/: Converge.omh
spk/cspk/ml/Test/: IndData.h  Makefile.am
spk/cspk/non_par/: README  build.sh  configure.ac
spk/cspk/non_par/cpp/: Makefile.am  all_ok.cpp  data_ok.cpp  opt_measure_ok.cpp  relaxed.cpp
spk/cspk/non_par/non_par/: data.hpp
spk/cspk/spk/: INSTALL  NEWS  README  configure.ac
spk/cspk/spk/doc/: Makefile
spk/cspk/spk/lib/: Makefile.am
spk/cspk/spk/libspk/: README
spk/cspk/spk/spk/: Covariance.h  DoubleMatrix.cpp  FullDataCovariance.cpp  Makefile  Makefile.am  Makefile.in  SpkException.cpp  System.h  WarningsManager.h  config.h.in  config.h.in~  doubleToScalar.cpp  elsq_xBlockDiag.h  expectedHessian.cpp  firstOrderOpt.cpp  fitIndividual.cpp  fitIndividual.h  fitPopulation.cpp  hasUnnormNumber.cpp  indStatistics.cpp  isNotANumber.cpp  lTilde.cpp  lTildePvm.cpp  lambdaDiff.cpp  linearInterpolate.h  mapObj.cpp  mapObj.h  mapObjDiff.cpp  mapObjDiff.h  mapOpt.cpp  mapOpt.h  mapTilde.cpp  popResiduals.cpp  popStatistics.h  ppkaOpt.cpp  ppkaOpt.h  ppkaOptParallel.cpp  quasiNewtonAnyBox.cpp  residuals.cpp  scalarToDouble.cpp  (+8 more)
spk/cspk/spk/test/: Makefile.in
spk/cspk/spkpred/: Makefile.am  README  RunOMhelp  configure.ac
spk/cspk/spkpred/doc/: Doxyfile
spk/cspk/spkpred/lib/: Makefile.am  configure.ac
spk/cspk/spkpred/spkpred/: BlkDiagCov.cpp  BlkDiagCov.h  Cov.cpp  Cov.h  DiagCov.cpp  DiagCov.h  FullCov.cpp  FullCovBase.h  IdentPredBase.h  IndPredModel.cpp  IndPredModel.h  IndPredModelBase.cpp  IndPredModelBase.h  Makefile.am  OdeBreak.h  OdePredBase.h  PopPredModel.cpp  PopPredModel.h  PopPredModelBase.cpp  PopPredModelBase.h  calcGroebnerBasis.c  calcGroebnerBasis.h  isEqual.cpp  isEqual.h  predTwoStageMethod.cpp
trunk/r1/brad/non_par/: README  build.sh  configure.ac
trunk/r2/sgid/check_ident/: Makefile.am
trunk/r2/sgid/web/: configure.ac
trunk/sgid/check_ident/src/: Makefile.am  Makefile.in  check_ident.cpp
trunk/sgid/libident/test/: Makefile.am  Makefile.in  test_libident.cpp
(+10744 files in other folders)
