AC_INIT(libspkcompiler, 0.1, honda99@u.washington.edu)
AC_CONFIG_SRCDIR(libspkcompiler/SpkMLToCpp.h)
AM_INIT_AUTOMAKE
AM_CONFIG_HEADER(config.h)
AC_PROG_CC
AC_PROG_CXX
AM_PROG_LEX(flex)
AC_PROG_YACC(bison)
AC_PROG_INSTALL
AC_PROG_LIBTOOL
AC_OUTPUT(Makefile libspkcompiler/Makefile libspkcompiler/nonmem/Makefile tests/Makefile tests/common/Makefile tests/nonmem/Makefile doc/Makefile)


