AC_INIT(spkcompiler, 0.1, honda99@u.washington.edu)
AC_CONFIG_SRCDIR(spkcompiler/main.cpp)
AM_INIT_AUTOMAKE
AM_CONFIG_HEADER(config.h)
AC_SUBST(CXXFLAGS, "")
AC_PROG_CC
AC_PROG_CXX
AM_PROG_LEX(flex)
AC_PROG_YACC(bison)
AC_PROG_INSTALL
AC_PROG_LIBTOOL
AC_OUTPUT(Makefile spkcompiler/nonmem/Makefile spkcompiler/Makefile tests/Makefile tests/common/Makefile tests/nonmem/Makefile doc/Makefile doc/common/Makefile doc/nonmem/Makefile)


